--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -23,12 +23,10 @@
     - name: Single-Page-Webanwendung (SPA)
       items:
         - name: Angular
-          href: quickstart-v2-angular.md
-        - name: 'Angular: Autorisierungscodeflow'
           href: quickstart-v2-javascript-auth-code-angular.md
         - name: JavaScript
           href: quickstart-v2-javascript-auth-code.md
-        - name: 'React: Autorisierungscodeflow'
+        - name: React
           href: quickstart-v2-javascript-auth-code-react.md
     - name: Web-App
       items:
@@ -81,8 +79,6 @@
     - name: Single-Page-Webanwendung (SPA)
       items:
         - name: Angular
-          href: tutorial-v2-angular.md
-        - name: 'Angular: Autorisierungscodeflow'
           href: tutorial-v2-angular-auth-code.md
         - name: Blazor WebAssembly
           href: tutorial-blazor-webassembly.md
@@ -148,13 +144,18 @@
       href: app-objects-and-service-principals.md
     - name: Bewährte Methoden für die Identitätsplattform
       href: identity-platform-integration-checklist.md
+    - name: App-Sicherheit
+      displayName: 'least privilege, secure app configuration, conditional access'
+      items:
+        - name: Best Practices für den Zugriff mit den geringsten Berechtigungen für Apps
+          href: secure-least-privileged-access.md
+        - name: Bedingter Zugriff
+          href: v2-conditional-access-dev-guide.md
+        - name: Authentifizierungskontext
+          href: developer-guide-conditional-access-authentication-context.md
     - name: Berechtigungen und Zustimmung
       displayName: Scopes
       href: v2-permissions-and-consent.md
-    - name: Bedingter Zugriff
-      href: v2-conditional-access-dev-guide.md
-    - name: Authentifizierungskontext
-      href: developer-guide-conditional-access-authentication-context.md
     - name: Automatische Benutzerbereitstellung (SCIM)
       href: ../app-provisioning/user-provisioning.md?toc=/azure/active-directory/develop/toc.json&bc=/azure/active-directory/develop/breadcrumb/toc.json
 - name: Vorgehensweise
@@ -617,6 +618,8 @@
               href: id-tokens.md
             - name: Zugriffstoken
               href: access-tokens.md
+            - name: Aktualisierungstoken
+              href: refresh-tokens.md
             - name: Konfigurieren der Tokengültigkeitsdauer
               href: active-directory-configurable-token-lifetimes.md
             - name: UserInfo-Endpunkt
