--- a/articles/azure-resource-manager/index.yml
+++ b/articles/azure-resource-manager/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Hub
 title: Dokumentation zu Azure Resource Manager
-summary: Azure Resource Manager ist der Bereitstellungs- und Verwaltungsdienst für Azure. Verwenden Sie die Infrastruktur als Code, um Ihre Azure-Lösungen zuverlässig bereitzustellen und zu verwalten.
+summary: 'Azure Resource Manager ist der Bereitstellungs- und Verwaltungsdienst für Azure. Verwenden Sie die Infrastruktur als Code, um Ihre Azure-Lösungen zuverlässig bereitzustellen und zu verwalten.'
 brand: azure
 metadata:
   title: Dokumentation zu Azure Resource Manager
@@ -10,106 +10,126 @@ metadata:
   ms.collection: collection
   author: tfitzmac
   ms.author: tomfitz
-  ms.date: 03/04/2020
-  ms.openlocfilehash: e844a428910a220d77c143baa74124a112135387
-  ms.sourcegitcommit: 5e5a0abe60803704cf8afd407784a1c9469e545f
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 12/01/2020
-  ms.locfileid: "96435211"
+  ms.date: 06/01/2021
 highlightedContent:
   items:
-  - title: Was ist Resource Manager?
-    itemType: overview
-    url: management/overview.md
-  - title: Was sind ARM-Vorlagen?
-    itemType: overview
-    url: templates/overview.md
-  - title: Erstellen Ihrer ersten Vorlage
-    itemType: tutorial
-    url: templates/template-tutorial-create-first-template.md
+    - title: Was ist Resource Manager?
+      itemType: overview
+      url: management/overview.md
+    - title: Was sind ARM-Vorlagen?
+      itemType: overview
+      url: templates/overview.md
+    - title: Was ist Bicep?
+      itemType: overview
+      url: bicep/overview.md
 conceptualContent:
   items:
-  - title: Bereitstellen von ARM-Vorlagen
-    links:
-    - url: templates/overview.md
-      itemType: overview
-      text: Übersicht
-    - url: templates/template-tutorial-create-first-template.md
-      itemType: tutorial
-      text: Tutorialreihe für Anfänger
-    - url: templates/template-syntax.md
-      itemType: reference
-      text: Vorlagensyntax
-    - url: templates/template-functions.md
-      itemType: reference
-      text: Funktionen von Azure-Ressourcen-Manager-Vorlagen
-    - url: /azure/templates/
-      itemType: reference
-      text: Vorlagenreferenz
-    - url: templates/deploy-powershell.md
-      itemType: how-to-guide
-      text: Bereitstellen
-    - url: templates/template-best-practices.md
-      itemType: concept
-      text: Bewährte Methoden
-    footerLink:
-      url: templates/index.yml
-      text: Weitere Informationen
-  - title: Ressourcen verwalten
-    links:
-    - url: management/overview.md
-      itemType: overview
-      text: Übersicht
-    - url: management/tag-resources.md
-      itemType: how-to-guide
-      text: Markieren von Ressourcen
-    - url: management/move-resource-group-and-subscription.md
-      itemType: concept
-      text: Verschieben von Ressourcen
-    - url: management/lock-resources.md
-      itemType: how-to-guide
-      text: Sperren von Ressourcen
-    - url: management/resource-providers-and-types.md
-      itemType: concept
-      text: Ressourcenanbieter und -typen
-    - url: management/azure-subscription-service-limits.md
-      itemType: concept
-      text: Einschränkungen bei Abonnements und Diensten
-    footerLink:
-      url: management/index.yml
-      text: Weitere Informationen
-  - title: Managed Applications
-    links:
-    - url: managed-applications/overview.md
-      itemType: overview
-      text: Übersicht
-    - url: managed-applications/publish-service-catalog-app.md
-      itemType: tutorial
-      text: Veröffentlichen einer App im Dienstkatalog
-    - url: managed-applications/create-uidefinition-overview.md
-      itemType: how-to-guide
-      text: Definieren des Portalbereichs zum Erstellen einer App
-    - url: ../marketplace/create-new-azure-apps-offer.md
-      itemType: tutorial
-      text: Hinzufügen einer App zum Marketplace
-    footerLink:
-      url: managed-applications/index.yml
-      text: Weitere Informationen
-  - title: Azure Custom Providers
-    links:
-    - url: custom-providers/overview.md
-      itemType: overview
-      text: Übersicht
-    - url: custom-providers/create-custom-provider.md
-      itemType: quickstart
-      text: Erstellen eines benutzerdefinierten Anbieters
-    - url: custom-providers/tutorial-get-started-with-custom-providers.md
-      itemType: tutorial
-      text: Erstellen benutzerdefinierter Aktionen und Ressourcen
-    - url: custom-providers/custom-providers-action-endpoint-how-to.md
-      itemType: how-to-guide
-      text: Hinzufügen benutzerdefinierter Aktionen zur Azure-REST-API
-    footerLink:
-      url: custom-providers/index.yml
-      text: Weitere Informationen
+    - title: Bereitstellen von ARM-Vorlagen
+      links:
+        - url: templates/overview.md
+          itemType: overview
+          text: Übersicht
+        - url: templates/template-tutorial-create-first-template.md
+          itemType: tutorial
+          text: Tutorialreihe für Anfänger
+        - url: ./templates/syntax.md
+          itemType: reference
+          text: Vorlagensyntax
+        - url: templates/template-functions.md
+          itemType: reference
+          text: Funktionen von Azure-Ressourcen-Manager-Vorlagen
+        - url: /azure/templates/
+          itemType: reference
+          text: Vorlagenreferenz
+        - url: templates/deploy-powershell.md
+          itemType: how-to-guide
+          text: Bereitstellen
+        - url: ./templates/best-practices.md
+          itemType: concept
+          text: Bewährte Methoden
+      footerLink:
+        url: templates/index.yml
+        text: Weitere Informationen
+    - title: Bereitstellen von Bicep-Dateien
+      links:
+        - url: bicep/overview.md
+          itemType: overview
+          text: Übersicht
+        - url: /learn/modules/deploy-azure-resources-by-using-bicep-templates
+          itemType: learn
+          text: Bereitstellen von Azure-Ressourcen
+        - url: bicep/file.md
+          itemType: reference
+          text: Bicep-Dateistruktur
+        - url: bicep/data-types.md
+          itemType: reference
+          text: Bicep-Datentypen
+        - url: bicep/bicep-functions.md
+          itemType: reference
+          text: Bicep-Funktionen
+        - url: bicep/operators.md
+          itemType: reference
+          text: Bicep-Operatoren
+        - url: bicep/deploy-powershell.md
+          itemType: how-to-guide
+          text: Bereitstellen
+      footerLink:
+        url: bicep/index.yml
+        text: Weitere Informationen
+    - title: Ressourcen verwalten
+      links:
+        - url: management/overview.md
+          itemType: overview
+          text: Übersicht
+        - url: management/tag-resources.md
+          itemType: how-to-guide
+          text: Markieren von Ressourcen
+        - url: management/move-resource-group-and-subscription.md
+          itemType: concept
+          text: Verschieben von Ressourcen
+        - url: management/lock-resources.md
+          itemType: how-to-guide
+          text: Sperren von Ressourcen
+        - url: management/resource-providers-and-types.md
+          itemType: concept
+          text: Ressourcenanbieter und -typen
+        - url: management/azure-subscription-service-limits.md
+          itemType: concept
+          text: Einschränkungen bei Abonnements und Diensten
+      footerLink:
+        url: management/index.yml
+        text: Weitere Informationen
+    - title: Managed Applications
+      links:
+        - url: managed-applications/overview.md
+          itemType: overview
+          text: Übersicht
+        - url: managed-applications/publish-service-catalog-app.md
+          itemType: tutorial
+          text: Veröffentlichen einer App im Dienstkatalog
+        - url: managed-applications/create-uidefinition-overview.md
+          itemType: how-to-guide
+          text: Definieren des Portalbereichs zum Erstellen einer App
+        - url: ../marketplace/azure-app-offer-setup.md
+          itemType: tutorial
+          text: Hinzufügen einer App zum Marketplace
+      footerLink:
+        url: managed-applications/index.yml
+        text: Weitere Informationen
+    - title: Azure Custom Providers
+      links:
+        - url: custom-providers/overview.md
+          itemType: overview
+          text: Übersicht
+        - url: custom-providers/create-custom-provider.md
+          itemType: quickstart
+          text: Erstellen eines benutzerdefinierten Anbieters
+        - url: custom-providers/tutorial-get-started-with-custom-providers.md
+          itemType: tutorial
+          text: Erstellen benutzerdefinierter Aktionen und Ressourcen
+        - url: custom-providers/custom-providers-action-endpoint-how-to.md
+          itemType: how-to-guide
+          text: Hinzufügen benutzerdefinierter Aktionen zur Azure-REST-API
+      footerLink:
+        url: custom-providers/index.yml
+        text: Weitere Informationen
