--- a/articles/private-link/toc.yml
+++ b/articles/private-link/toc.yml
@@ -51,6 +51,8 @@
       href: private-link-service-overview.md
     - name: DNS-Integration für private Endpunkte
       href: private-endpoint-dns.md
+    - name: RBAC-Berechtigungen
+      href: rbac-permissions.md
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
