commit translated contents

--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -368,6 +368,8 @@
           href: sql-data-warehouse-restore-from-geo-backup.md
         - name: Deaktivieren von Geosicherungen
           href: disable-geo-backup.md
+        - name: Konfigurieren der Residenz in einer einzelnen Region
+          href: single-region-residency.md
     - name: Integrieren
       items:
         - name: Verwenden von maschinellem Lernen
