--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -150,6 +150,8 @@
           href: cdn-troubleshoot-compression.md
         - name: Zulässige Zertifizierungsstellen
           href: cdn-troubleshoot-allowed-ca.md
+        - name: Abonnementangebote und Bandbreiteneinschränkung
+          href: subscription-offerings.md
 - name: Verweis
   items:
     - name: Referenz zur Standardregel-Engine
