--- a/articles/managed-instance-apache-cassandra/TOC.yml
+++ b/articles/managed-instance-apache-cassandra/TOC.yml
@@ -26,9 +26,21 @@
       href: compare-cosmosdb-managed-instance.md
 - name: Anleitungen
   items:
+    - name: Migration
+      items:
+        - name: Livemigration
+          items:
+            - name: Verwenden eines Proxys für duales Schreiben
+              href: dual-write-proxy-migration.md
+        - name: Offlinemigration
+          items:
+            - name: Verwenden von Apache Spark
+              href: spark-migration.md
     - name: Verwalten mit der Azure CLI
       displayName: 'az managed-cassandra, cluster, datacenter'
       href: manage-resources-cli.md
+    - name: Erforderliche Netzwerkregeln für ausgehenden Datenverkehr
+      href: network-rules.md
     - name: Visualisieren von Metriken in Prometheus mit Grafana
       href: visualize-prometheus-grafana.md
 - name: Verweis
