commit translated contents

--- a/articles/purview/toc.yml
+++ b/articles/purview/toc.yml
@@ -20,6 +20,12 @@ items:
         href: manage-kafka-dotnet.md
   - name: Tutorials
     items:
+      - name: Durchführen des Onboardings von Azure-Datenquellen im großen Stil
+        items:
+          - name: Bereitschaftsprüfung für Azure-Datenquellen im großen Stil
+            href: tutorial-data-sources-readiness.md
+          - name: Azure Purview MSI-Konfiguration im großen Stil
+            href: tutorial-msi-configuration.md
       - name: "Starter\_Kit"
         items:
           - name: Daten scannen
@@ -196,6 +202,8 @@ items:
     items:
       - name: Unterstützte Klassifizierungen
         href: supported-classifications.md
+      - name: Azure Purview-Produktglossar
+        href: reference-purview-glossary.md
       - name: Leitfaden zur ABAP-Funktionsbereitstellung
         href: abap-functions-deployment-guide.md
   - name: Ressourcen
